client: don't try to access client after it's vanished

After we emit the disconnected signal on the client it's likely
to get freed, so don't try to use it from that point forward.

https://bugzilla.gnome.org/show_bug.cgi?id=763169